--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "fec-pattern-library",
   "version": "0.1.0",
   "dependencies": {
-    "@frctl/fractal": "^1.1.7",
-    "@frctl/nunjucks": "^1.0.x",
     "a11y-dialog": "2.3.1",
     "aria-accordion": "^0.1.1",
+    "@frctl/fractal": "git+https://github.com/fecgov/fractal.git",
     "jquery": "^3.3.1",
     "jquery.inputmask": "3.3.4",
     "moment": "2.20.1",
+    "@frctl/nunjucks": "git+https://github.com/fecgov/nunjucks.git",
     "perfect-scrollbar": "0.6.2",
     "snyk": "^1.74.0"
   },
